--- a/services/MenuService/package.json
+++ b/services/MenuService/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "midterm_soa",
+  "name": "menuservice",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,13 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "http-proxy-middleware": "^3.0.3",
-    "midterm_soa": "file:",
+    "menuservice": "file:",
     "mongoose": "^8.12.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   }
 }
