--- a/server/services/OrderingService/package.json
+++ b/server/services/OrderingService/package.json
@@ -11,7 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "orderingservice": "file:"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "mongoose": "^8.13.0",
+    "nodemon": "^3.1.9"
   }
 }
